cmake_minimum_required(VERSION 3.0.0)
project(leetcode VERSION 0.1.0)

enable_testing()

add_executable(leetcode main.cpp)

add_executable(49-group-anagrams src/sort/49-group-anagrams.cpp)
add_executable(75-color-sort src/sort/75-sort-color.cpp)
add_executable(179-largest-num src/sort/179-largest-num.cpp)
add_executable(378-kth-smallest src/sort/378-kth-smallest.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CMAKE_CXX_STANDARD 11)
include(CPack)

add_executable(98-verify-bst src/dfs/98-verify-bst.cpp)
add_executable(419-count-ships src/dfs/419-count-ships.cpp)
add_executable(307-range-sum-query src/bit/307-range-sum-query.cpp)
add_executable(315-count-smaller src/bit/315-count-smaller.cpp)
add_executable(327-count-range-sum src/bit/327-count-range-sum.cpp)
add_executable(1331-array-rank src/discretization/1331-array-rank.cpp)
add_executable(493-reverse-pair src/bit/493-reverse-pair.cpp)
add_executable(offer51-reverse-pair src/bit/offer51-reverse-pair.cpp)
add_executable(1450-busy-student src/diff/1450-busy-student.cpp)
add_executable(bit-template src/bit/bit-template.cpp)
add_executable(307-range src/sigment-tree/307-range.cpp)
add_executable(1450-busy-student-2 src/sigment-tree/1450-busy-student-2.cpp)
add_executable(1090-largest-num src/sort/1090-largest-num.cpp)
add_executable(1598-folder src/simulation/1598-folder.cpp)
add_executable(667-construct-array src/array/667-construct-array.cpp)
add_executable(16-closest-sum src/array/16-closest-sum.cpp)
add_executable(1582-min-cost src/graph/1582-min-cost.cpp)
add_executable(669-trim-bst src/tree/669-trim-bst.cpp)
add_executable(743-net-delay src/tree/743-net-delay.cpp)
add_executable(857-min-cost src/greedy/857-min-cost.cpp)
add_executable(207-curricular src/graph/207-curricular.cpp)
add_executable(210-curricular src/graph/210-curricular.cpp)
add_executable(1608-special-val src/array/1608-special-val.cpp)
add_executable(684-redundant-connection src/graph/684-redundant-connection.cpp)
add_executable(684-redundant-connection-2 src/graph/684-redundant-connection-2.cpp)
add_executable(1636-frequency src/array/1636-frequency.cpp)
add_executable(785-is-bipartite src/graph/785-is-bipartite.cpp)
add_executable(1334-find-city src/graph/1334-find-city.cpp)